// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Qvain dataset list PreservationStates should render <TablePasState /> 1`] = `
<Fragment>
  <Translate
    color="primary"
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": e {
          "baseHash": -703652486,
          "baseStyle": e {
            "baseHash": -1988014698,
            "baseStyle": undefined,
            "componentId": "label__Label-x0jqqw-0",
            "isStatic": false,
            "rules": Array [
              "
  padding: 0.3em 0.6em 0.4em;
  border-radius: 0.2em;
  background: ",
              [Function],
              ";
  color: white;
  display: inline-block;
  margin: ",
              [Function],
              ";
",
            ],
            "staticRulesId": "",
          },
          "componentId": "tablePasState__PasLabel-kh2b5p-0",
          "isStatic": false,
          "rules": Array [
            "
  margin-left: 10px;
  text-transform: uppercase;
",
          ],
          "staticRulesId": "",
        },
        "displayName": "tablePasState__PasLabel",
        "foldedComponentIds": Array [
          "label__Label-x0jqqw-0",
        ],
        "render": [Function],
        "shouldForwardProp": undefined,
        "styledComponentId": "tablePasState__PasLabel-kh2b5p-0",
        "target": "div",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    content="qvain.files.dataCatalog.pas"
  />
  <Translate
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "attrs": Array [],
        "componentStyle": e {
          "baseHash": -1476272384,
          "baseStyle": undefined,
          "componentId": "tablePasState__PasText-kh2b5p-1",
          "isStatic": false,
          "rules": Array [
            "
  margin-left: 10px;
  font-size: 0.8em;
  :before {
    content: '(';
  }
  :after {
    content: ')';
  }
",
          ],
          "staticRulesId": "",
        },
        "displayName": "tablePasState__PasText",
        "foldedComponentIds": Array [],
        "render": [Function],
        "shouldForwardProp": undefined,
        "styledComponentId": "tablePasState__PasText-kh2b5p-1",
        "target": "span",
        "toString": [Function],
        "warnTooManyClasses": [Function],
        "withComponent": [Function],
      }
    }
    content="qvain.pasState.0"
  />
</Fragment>
`;

exports[`Qvain should render correctly 1`] = `
<card__QvainContainer>
  <Header
    datasetError={false}
    datasetLoading={false}
  />
  <StickyHeader
    clearSubmitResponse={[Function]}
    datasetError={false}
    datasetLoading={false}
    handleSubmitError={[Function]}
    handleSubmitResponse={[Function]}
    response={null}
    submitButtonsRef={
      Object {
        "current": null,
      }
    }
    submitted={false}
  />
  <Dataset
    datasetError={false}
    datasetErrorDetails={null}
    datasetErrorTitle={null}
    handleRetry={[Function]}
    handleSubmitError={[Function]}
    handleSubmitResponse={[Function]}
    haveDataset={true}
    setFocusOnSubmitButton={[Function]}
  />
  <LooseActorsDialog />
  <LooseProvenanceDialog />
  <Translate
    attributes={
      Object {
        "message": "qvain.unsavedChanges",
      }
    }
    component={[Function]}
    when={false}
  />
</card__QvainContainer>
`;

exports[`Qvain.Description should render <DescriptionField /> 1`] = `
<div
  className="container"
>
  <title__SectionTitle>
    <Translate
      component="span"
      content="qvain.description.title"
    />
    <Tooltip
      align="Right"
      close={[Function]}
      isOpen={false}
      text={<DescriptionInfo />}
    >
      <HelpIcon
        aria-label="Description info"
        onClick={[Function]}
      />
    </Tooltip>
  </title__SectionTitle>
  <DescriptionField />
  <IssuedDateField />
  <OtherIdentifierField />
  <FieldOfScienceField />
  <LanguageField />
  <KeywordsField />
  <SubjectHeadingsField />
</div>
`;

exports[`Qvain.Description should render <FieldOfScienceField /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="fieldOfScience-select"
  >
    <Translate
      component="span"
      content="qvain.description.fieldOfScience.title"
    />
  </form__LabelLarge>
  <Translate
    component="p"
    content="qvain.description.fieldOfScience.help"
  />
  <Translate
    attributes={
      Object {
        "placeholder": "qvain.description.fieldOfScience.placeholder",
      }
    }
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "render": [Function],
      }
    }
    getRefGroups={[Function]}
    getter={Array []}
    isClearable={false}
    isMulti={true}
    metaxIdentifier="field_of_science"
    model={[Function]}
    modifyGroupLabel={[Function]}
    modifyOptionLabel={[Function]}
    name="fieldOfScience"
    setter={[Function]}
    sortFunc={[Function]}
  />
</Card>
`;

exports[`Qvain.Description should render <KeywordsField /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="keywords-input"
  >
    <TooltipHover
      position="right"
      showOnClick={false}
      showOnHover={true}
      title="Required to save and publish"
    >
      <Translate
        component="span"
        content="qvain.description.keywords.title"
      />
       *
    </TooltipHover>
  </form__LabelLarge>
  <Translate
    component="p"
    content="qvain.description.keywords.help"
  />
  <StringArray
    addItemStr={[Function]}
    addWithComma={true}
    id="keywords-input"
    itemSchema={null}
    itemStr=""
    readonly={false}
    required={true}
    schema={
      ArraySchema {
        "_blacklist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "_conditions": Array [],
        "_deps": Array [],
        "_exclusive": Object {
          "required": true,
        },
        "_mutate": undefined,
        "_options": Object {
          "abortEarly": true,
          "recursive": true,
        },
        "_subType": StringSchema {
          "_blacklist": RefSet {
            "list": Set {},
            "refs": Map {},
          },
          "_conditions": Array [],
          "_deps": Array [],
          "_exclusive": Object {
            "max": true,
          },
          "_mutate": undefined,
          "_options": Object {
            "abortEarly": true,
            "recursive": true,
          },
          "_type": "string",
          "_typeError": [Function],
          "_whitelist": RefSet {
            "list": Set {},
            "refs": Map {},
          },
          "tests": Array [
            [Function],
          ],
          "transforms": Array [
            [Function],
          ],
          "type": "string",
        },
        "_type": "array",
        "_typeError": [Function],
        "_whitelist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "innerType": StringSchema {
          "_blacklist": RefSet {
            "list": Set {},
            "refs": Map {},
          },
          "_conditions": Array [],
          "_deps": Array [],
          "_exclusive": Object {
            "max": true,
          },
          "_mutate": undefined,
          "_options": Object {
            "abortEarly": true,
            "recursive": true,
          },
          "_type": "string",
          "_typeError": [Function],
          "_whitelist": RefSet {
            "list": Set {},
            "refs": Map {},
          },
          "tests": Array [
            [Function],
          ],
          "transforms": Array [
            [Function],
          ],
          "type": "string",
        },
        "tests": Array [
          [Function],
        ],
        "transforms": Array [
          [Function],
        ],
        "type": "array",
      }
    }
    set={[Function]}
    setItemStr={[Function]}
    setValidationError={[Function]}
    translationsRoot="qvain.description.keywords"
    validationError=""
    value={Array []}
  />
</Card>
`;

exports[`Qvain.Description should render <LanguageField /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="dataset-language-select"
  >
    <Translate
      component="span"
      content="qvain.description.datasetLanguage.title"
    />
  </form__LabelLarge>
  <Translate
    component="p"
    content="qvain.description.datasetLanguage.help"
  />
  <SearchSelect
    getter={Array []}
    id="datasetLanguage"
    inModal={false}
    isClearable={false}
    isMulti={true}
    metaxIdentifier="language"
    model={[Function]}
    name="dataset-language"
    noOptionsMessage={[Function]}
    placeholder="qvain.description.datasetLanguage.placeholder"
    search={true}
    setter={[Function]}
  />
</Card>
`;

exports[`Qvain.Description should render <OtherIdentifierField /> 1`] = `
<Card
  bottomContent={true}
>
  <form__LabelLarge
    htmlFor="other-identifiers-input"
  >
    <Translate
      component="span"
      content="qvain.description.otherIdentifiers.title"
    />
  </form__LabelLarge>
  <Translate
    component="p"
    content="qvain.description.otherIdentifiers.instructions"
  />
  <StringArray
    addItemStr={[Function]}
    addWithComma={true}
    id="other-identifiers-input"
    itemSchema={
      StringSchema {
        "_blacklist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "_conditions": Array [],
        "_deps": Array [],
        "_exclusive": Object {
          "max": true,
          "min": true,
          "url": false,
        },
        "_mutate": undefined,
        "_options": Object {
          "abortEarly": true,
          "recursive": true,
        },
        "_type": "string",
        "_typeError": [Function],
        "_whitelist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "tests": Array [
          [Function],
          [Function],
          [Function],
        ],
        "transforms": Array [
          [Function],
        ],
        "type": "string",
      }
    }
    itemStr=""
    readonly={false}
    required={false}
    schema={
      ArraySchema {
        "_blacklist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "_conditions": Array [],
        "_deps": Array [],
        "_exclusive": Object {},
        "_mutate": undefined,
        "_nullable": true,
        "_options": Object {
          "abortEarly": true,
          "recursive": true,
        },
        "_subType": StringSchema {
          "_blacklist": RefSet {
            "list": Set {},
            "refs": Map {},
          },
          "_conditions": Array [],
          "_deps": Array [],
          "_exclusive": Object {
            "max": true,
            "min": true,
            "url": false,
          },
          "_mutate": undefined,
          "_options": Object {
            "abortEarly": true,
            "recursive": true,
          },
          "_type": "string",
          "_typeError": [Function],
          "_whitelist": RefSet {
            "list": Set {},
            "refs": Map {},
          },
          "tests": Array [
            [Function],
            [Function],
            [Function],
          ],
          "transforms": Array [
            [Function],
          ],
          "type": "string",
        },
        "_type": "array",
        "_typeError": [Function],
        "_whitelist": RefSet {
          "list": Set {},
          "refs": Map {},
        },
        "innerType": StringSchema {
          "_blacklist": RefSet {
            "list": Set {},
            "refs": Map {},
          },
          "_conditions": Array [],
          "_deps": Array [],
          "_exclusive": Object {
            "max": true,
            "min": true,
            "url": false,
          },
          "_mutate": undefined,
          "_options": Object {
            "abortEarly": true,
            "recursive": true,
          },
          "_type": "string",
          "_typeError": [Function],
          "_whitelist": RefSet {
            "list": Set {},
            "refs": Map {},
          },
          "tests": Array [
            [Function],
            [Function],
            [Function],
          ],
          "transforms": Array [
            [Function],
          ],
          "type": "string",
        },
        "tests": Array [],
        "transforms": Array [
          [Function],
        ],
        "type": "array",
      }
    }
    set={[Function]}
    setItemStr={[Function]}
    setValidationError={[Function]}
    translationsRoot="qvain.description.otherIdentifiers"
    validationError=""
    value={Array []}
  />
</Card>
`;

exports[`Qvain.Description should render <SubjectHeadingsField /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="subjectHeading-select"
  >
    <Translate
      component="span"
      content="qvain.description.subjectHeadings.title"
    />
  </form__LabelLarge>
  <Translate
    component="p"
    content="qvain.description.subjectHeadings.help"
  />
  <SearchSelect
    getter={Array []}
    inModal={false}
    isClearable={false}
    isMulti={true}
    metaxIdentifier="keyword"
    model={[Function]}
    name="subjectHeading"
    placeholder="qvain.description.subjectHeadings.placeholder"
    setter={[Function]}
  />
</Card>
`;

exports[`Qvain.RightsAndLicenses should render <AccessType /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="accessTypeSelect"
  >
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.accessType.title"
    />
  </form__LabelLarge>
  <Translate
    attributes={
      Object {
        "placeholder": "qvain.rightsAndLicenses.accessType.placeholder",
      }
    }
    clearable={true}
    component={[Function]}
    getOptionLabel={[Function]}
    getOptionValue={[Function]}
    inputId="accessTypeSelect"
    isDisabled={false}
    name="accessType"
    onBlur={[Function]}
    onChange={[Function]}
    options={Array []}
    value={
      Object {
        "name": undefined,
        "url": "http://uri.suomi.fi/codelist/fairdata/access_type/code/open",
      }
    }
  />
  <validationError__ValidationError />
</Card>
`;

exports[`Qvain.RightsAndLicenses should render <Licenses /> 1`] = `
<Card
  bottomContent={false}
>
  <form__LabelLarge
    htmlFor="licenseSelect"
  >
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.license.title"
    />
  </form__LabelLarge>
  <Translate
    component="p"
    content="qvain.rightsAndLicenses.license.infoText"
  />
  <Translate
    attributes={
      Object {
        "placeholder": "qvain.rightsAndLicenses.license.placeholder",
      }
    }
    component={[Function]}
    createOptionPosition="first"
    getNewOptionData={[Function]}
    getOptionLabel={[Function]}
    getOptionValue={[Function]}
    inputId="licenseSelect"
    isClearable={false}
    isDisabled={false}
    isMulti={true}
    name="license"
    onChange={[Function]}
    options={Array []}
    styles={
      Object {
        "multiValue": [Function],
        "multiValueLabel": [Function],
      }
    }
    value={
      Array [
        Object {
          "identifier": "http://uri.suomi.fi/codelist/fairdata/license/code/CC-BY-4.0",
          "name": undefined,
        },
      ]
    }
  />
  <ValidationErrors
    errors={Array []}
  />
</Card>
`;

exports[`Qvain.RightsAndLicenses should render <RightsAndLicenses /> 1`] = `
<div
  className="container"
>
  <title__SectionTitle>
    <Translate
      component="span"
      content="qvain.rightsAndLicenses.title"
    />
    <Tooltip
      align="Right"
      close={[Function]}
      isOpen={false}
      text={<LicensesInfo />}
    >
      <HelpIcon
        aria-label="Rights And Licenses info"
        onClick={[Function]}
      />
    </Tooltip>
  </title__SectionTitle>
  <WithTheme(Component) />
  <ForwardRef />
</div>
`;
